ref #897 Chanzhi BugFix Message and comment area overlap

--- a/system/template/mobile/message/css/index.css
+++ b/system/template/mobile/message/css/index.css
@@ -153,5 +153,4 @@ input:focus, textarea:focus {
     color: #676767;
     font-size: 12px;
     margin: 0 12px 0 12px;
-    height: 25px;
 }
